fix split text wrap

--- a/styles/app.css
+++ b/styles/app.css
@@ -87,6 +87,8 @@
   color: var(--color-white);
   font-size: 1.2em;
   overflow:hidden;  
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .flex-centered {
